--- a/design-tokens/package.json
+++ b/design-tokens/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "design-tokens",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "node src/index.js",
+    "build:dev": "rm -rf dist && node src/index.js"
+  },
   "dependencies": {
     "style-dictionary": "^3.7.1"
   }
